2017-06-30         Arnold D. Robbins     <arnold@skeeve.com>

	Add namespace info into Op_Rule and Op_Func.
	Fix memory management problem.
	The changes temporarily break the test suite.

	* awk.h (MAX_INSTRUCTION_ALLOC): Increase to 4.
	(Op_K_namespace): Remove, not needed.
	* eval.c (optypetab): Remove Op_K_namespace.
	* awkgram.y (make_pp_namespace): New function.
	(yylex): For BEGIN etc, allocate 4 in the instruction.
	(install_func): Save namespace name for Op_rule.
	(append_rule): Save namespace name for Op_rule.
	* debug.c (print_instruction): Print namespace for Op_rule, Op_func.
	Remove Op_K_namespace.
	* profile.c (pp_namespace, remove_namespace): New functions.
	(pprint): Call `pp_namespace'. Use `remove_namespace' on variable
	names.
	(pp_func): Ditto on both.
	* symbol.c (lookup): Initialize `malloced' to false.
	(install): Ditto.

	Unbreak the test suite:

	* awk.h (namespace_changed): Declare new boolean variable.
	* awkgram.y (namespace_changed): Define new boolean variable.
	(set_namespace): Set it to true when the namespace is changed.
	* main.c (main): Set current_namespace to "awk::" for the pretty
	printer.
	* profile.c (pp_namespace): If namespace_changed is false, return.

2017-06-28         Arnold D. Robbins     <arnold@skeeve.com>

	* awk.h [ns_name]: Add macro in preparation for use.
	* debug.c (print_instruction): Add case for Op_K_namespace.
	Not really used yet.
	* symbol.c (fix_up_namespace): Bug fix to always allocate
	memory for a full name. Add boolean parameter to indicate
	if memory was malloc'ed or not.
	(lookup): Adjust call to fix_up_namespace and use make_str_node
	if the string was malloced.
	(install): Ditto.

2017-06-25         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* gawkmisc.c (xmalloc): Remove function now in support/xalloc.h.

2017-06-22         Arnold D. Robbins     <arnold@skeeve.com>

	Make pretty-printing include parentheses that were explicitly