@@ -739,6 +739,8 @@ EXTRA_DIST = \
 	nors.ok \
 	nsprof1.awk \
 	nsprof1.ok \
+	nsprof2.awk \
+	nsprof2.ok \
 	nulinsrc.awk \
 	nulinsrc.ok \
 	nulrsend.awk \
@@ -1260,7 +1262,7 @@ GAWK_EXT_TESTS = \
 	muldimposix \
 	nastyparm negtime next nondec nondec2 \
 	nonfatal1 nonfatal2 nonfatal3 \
-	nsprof1 \
+	nsprof1 nsprof2 \
 	patsplit posix printfbad1 printfbad2 printfbad3 printfbad4 printhuge procinfs \
 	profile0 profile1 profile2 profile3 profile4 profile5 profile6 profile7 \
 	profile8 profile9 profile10 pty1 \
@@ -2425,6 +2427,11 @@ sourcesplit:
 	@-$(CMP) "$(srcdir)"/$@.ok _$@ && rm -f _$@
 
 nsprof1:
+	@echo $@
+	@$(AWK) --pretty-print=_$@ -f "$(srcdir)"/$@.awk < /dev/null
+	@-$(CMP) "$(srcdir)"/$@.ok _$@ && rm -f _$@
+
+nsprof2:
 	@echo $@
 	@$(AWK) --pretty-print=_$@ -f "$(srcdir)"/$@.awk < /dev/null
 	@-$(CMP) "$(srcdir)"/$@.ok _$@ && rm -f _$@
